--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-    id 'application'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'org.springframework.boot' version '2.7.10'
 }
@@ -17,8 +16,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
 }
 
-// gradlew run에서 실행할 mainClass 정의
-application {
-    // Define the main class for the application.
-    mainClass = 'at_ticket.app.App'
+bootRun {
+    // gradlew bootRun -Dprofile={프로필} = java -jar -Dspring.profiles.active={프로필} 빌드파일.jar
+    String activeProfile = System.properties['profile']
+    if(activeProfile!=null) systemProperty "spring.profiles.active", activeProfile
 }
