--- a/buildSrc/src/main/groovy/common-conventions.gradle
+++ b/buildSrc/src/main/groovy/common-conventions.gradle
@@ -21,7 +21,7 @@ dependencies {
 bootRun {
     /**
      * gradlew :{모듈명}:bootRun -Dprofile={프로파일} = java -jar -Dspring.profiles.active={프로파일} 빌드파일명.jar
-     * e.g.) gradlew :reservation:bootRun -Dprofile=dev = java -jar -Dspring.profiles.active=dev reservation-1.0.0-SNAPSHOT.jar
+     * e.g. gradlew :reservation:bootRun -Dprofile=dev = java -jar -Dspring.profiles.active=dev reservation-1.0.0-SNAPSHOT.jar
      * */
     String activeProfile = System.properties.getProperty('profile')
     if (activeProfile != null) systemProperty "spring.profiles.active", activeProfile
