feat : settings.gradle에 product 모듈 추가

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,4 @@
  */
 
 rootProject.name = 'at_ticket'
-include ':reservation', ':payment', ':common'
+include ':reservation', ':payment', ':common', ':product'
