--- a/buildSrc/src/main/groovy/common-conventions.gradle
+++ b/buildSrc/src/main/groovy/common-conventions.gradle
@@ -16,6 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 bootRun {
