--- a/buildSrc/src/main/groovy/common-conventions.gradle
+++ b/buildSrc/src/main/groovy/common-conventions.gradle
@@ -18,6 +18,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 }
 
 test {
