--- a/buildSrc/src/main/groovy/common-conventions.gradle
+++ b/buildSrc/src/main/groovy/common-conventions.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 test {
