--- a/product/src/main/resources/application-dev.yml
+++ b/product/src/main/resources/application-dev.yml
@@ -6,5 +6,17 @@ api:
     url: reservation
     port: 8100
 
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://database:3306/product
+    username: root
+    password: 1234
 
-
+jpa:
+  hibernate:
+    ddl-auto: create
+  show-sql: true
+  properties:
+    hibernate:
+      format_sql: true
