--- a/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
+++ b/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
@@ -8,6 +8,9 @@ dependencies {
 
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
+
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("com.mysql:mysql-connector-j")
 }
 
 test {
