- Repository 정리 및 시작시 DB데이터 삽입하도록 설정

--- a/product/src/main/resources/application-dev.yml
+++ b/product/src/main/resources/application-dev.yml
@@ -12,6 +12,9 @@ spring:
     url: jdbc:mysql://database:3306/product
     username: root
     password: 1234
+  sql:
+    init:
+      mode: always
 
   jpa:
     hibernate:
@@ -20,3 +23,4 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    defer-datasource-initialization: true
