--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
     url: jdbc:mysql://localhost:3306/product?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: 1234
+  sql:
+    init:
+      mode: always
 
   jpa:
     hibernate:
@@ -21,3 +24,4 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    defer-datasource-initialization: true
