--- a/product/src/main/resources/application-dev.yml
+++ b/product/src/main/resources/application-dev.yml
@@ -17,9 +17,10 @@ spring:
       mode: always
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+    generate-ddl: true
     defer-datasource-initialization: true
