--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -18,9 +18,11 @@ spring:
       mode: always
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+    #서버시작 시점에 ddl 문을 생성하여 DB적용
+    generate-ddl: true
     defer-datasource-initialization: true
