--- a/payment/src/main/resources/application.yml
+++ b/payment/src/main/resources/application.yml
@@ -7,11 +7,15 @@ spring:
     url: jdbc:mysql://localhost:3306/payment?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: 1234
-
+  sql:
+    init:
+      mode: always
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+    generate-ddl: true
+    defer-datasource-initialization: true
