--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,21 @@
 version: "3.0"
 services:
+  reverse-proxy:
+    image: nginx
+    container_name: at_ticket-reverse-proxy
+    ports:
+      - 80:80
+      - 443:443
+    restart: always
+    # SSL 적용
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./ssl/api/fullchain.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem
+      - ./ssl/api/privkey.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem
+      - ./ssl/keycloak/fullchain.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem
+      - ./ssl/keycloak/privkey.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem
+
+
   database:
     image: mysql
     container_name: at_ticket_db
@@ -15,6 +31,8 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+
+
   product:
     #DB가 실행되기 전까진 어플리케이션이 실행되지 않도록 설정
     depends_on:
@@ -24,10 +42,12 @@ services:
       context: .
       dockerfile: ./product/Dockerfile
     container_name: at_ticket-product
-    ports:
-      - 8000:8000
+    expose:
+      - 8000
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+
+
   reservation:
     depends_on:
       database:
@@ -40,6 +60,8 @@ services:
       - 8100
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+
+
   payment:
     depends_on:
       database:
@@ -52,19 +74,25 @@ services:
       - 8200
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+
+
   user:
     #DB가 실행되기 전까진 어플리케이션이 실행되지 않도록 설정
     depends_on:
       database:
         condition: service_healthy
+      keycloak:
+        condition: service_started
     build:
       context: .
       dockerfile: ./user/Dockerfile
     container_name: at_ticket-user
-    ports:
-      - 9000:9000
+    expose:
+      - 9000
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+
+
   keycloak:
     image: quay.io/keycloak/keycloak:21.1.2
     container_name: at_ticket-keycloak
