--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+
+
   product:
     #DB가 실행되기 전까진 어플리케이션이 실행되지 않도록 설정
     depends_on:
@@ -26,6 +28,10 @@ services:
     container_name: at_ticket-product
     ports:
       - 8000:8000
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+
+
   reservation:
     depends_on:
       database:
@@ -36,6 +42,10 @@ services:
     container_name: at_ticket-reservation
     ports:
       - 8100:8100
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+
+
   payment:
     depends_on:
       database:
@@ -46,17 +56,27 @@ services:
     container_name: at_ticket-payment
     ports:
       - 8200:8200
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+
+
   user:
     #DB가 실행되기 전까진 어플리케이션이 실행되지 않도록 설정
     depends_on:
       database:
         condition: service_healthy
+      keycloak:
+        condition: service_started
     build:
       context: .
       dockerfile: ./user/Dockerfile
     container_name: at_ticket-user
     ports:
       - 9000:9000
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+
+
   keycloak:
     image: quay.io/keycloak/keycloak:21.1.2
     container_name: at_ticket-keycloak
@@ -71,4 +91,3 @@ services:
     depends_on:
       database:
         condition: service_healthy
-
