--- a/user/build.gradle
+++ b/user/build.gradle
@@ -1,9 +1,11 @@
 plugins {
-    id 'atticket-spring-boot-app'
+    id 'atticket-spring-boot'
 }
 
 dependencies {
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
+
     implementation project(':common:response')
     implementation project(':common:utils')
-    implementation project(':common:jwt-manager')
 }
