--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 server:
   port: 9000
 keycloak:
-  url: http://localhost:8080
+  url: keycloak:8080
   realm: atticket
   admin:
     username: admin
