--- a/keycloak/local.conf
+++ b/keycloak/local.conf
@@ -1,4 +1,6 @@
 db=mysql
-db-username=root
-db-password=1234
+db-username=${MYSQL_ROOT_USERNAME}
+db-password=${MYSQL_ROOT_PASSWORD}
+admin=${KEYCLOAK_ADMIN_USERNAME}
+admin-password=${KEYCLOAK_ADMIN_PASSWORD}
 db-url=jdbc:mysql://database/keycloak
