--- a/user/src/main/resources/application-dev.yml
+++ b/user/src/main/resources/application-dev.yml
@@ -3,6 +3,9 @@ server:
 keycloak:
   url: keycloak:8080
   realm: atticket
+  client:
+    id: atticket
+    secret: ${KEYCLOAK_CLIENT_SECRET}
   admin:
-    username: admin
-    password: atticket
+    username: ${KEYCLOAK_ADMIN_USERNAME}
+    password: ${KEYCLOAK_ADMIN_PASSWORD}
