--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,22 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: at_ticket_zookeeper
+    ports:
+      - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:2.12-2.5.0
+    container_name: at_ticket_kafka
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
   product:
     #DB가 실행되기 전까진 어플리케이션이 실행되지 않도록 설정
     depends_on:
@@ -54,6 +70,7 @@ services:
       - 8200
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+
 
 
 
