--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ include ':user'
 include ':common:response'
 include ':common:utils'
 include ':common:jwt-manager'
+include ':common:secret-config'
