--- a/user/build.gradle
+++ b/user/build.gradle
@@ -8,4 +8,5 @@ dependencies {
 
     implementation project(':common:response')
     implementation project(':common:utils')
+    implementation project(':common:secret-config')
 }
