--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,11 +1,11 @@
-version: "3.0"
+version: "3.9"
 services:
   reverse-proxy:
     image: nginx
     container_name: at_ticket-reverse-proxy
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+      - "443:443"
     restart: always
     # SSL 적용
     volumes:
@@ -26,7 +26,7 @@ services:
       - 3306
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 1234
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
     healthcheck:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
@@ -100,8 +100,12 @@ services:
       - 8080
     command: start --features=preview
     environment:
-      - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_ADMIN_PASSWORD=atticket
+      - KC_DB=mysql
+      - KC_DB_USERNAME=${DB_USERNAME}
+      - KC_DB_PASSWORD=${DB_PASSWORD}
+      - KEYCLOAK_ADMIN=${KEYCLOAK_ADMIN_USERNAME}
+      - KEYCLOAK_ADMIN_PASSWORD=${KEYCLOAK_ADMIN_PASSWORD}
+      - KC_DB_URL=${DB_KEYCLOAK_URL}
     volumes:
       - ./keycloak/dev.conf:/opt/keycloak/conf/keycloak.conf
     depends_on:
