--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,13 +27,18 @@ services:
     container_name: at_ticket_kafka
     ports:
       - "9092:9092"
+      - "9093:9093"
     depends_on:
       - zookeeper
     environment:
+      JVM_OPTS: -Xmx1g -Xms1g -XX:MaxPermSize=1024m
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_PORT: 9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_HOST_NAME: 127.0.0.1
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_LISTENERS: INSIDE://kafka:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
 
   product:
     #DB가 실행되기 전까진 어플리케이션이 실행되지 않도록 설정
@@ -70,6 +75,18 @@ services:
     container_name: at_ticket-payment
     expose:
       - 8200
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+  kafka-app:
+    build:
+      context: .
+      dockerfile: ./kafka/Dockerfile
+    container_name: at_ticket-kafka
+    ports:
+      - "9000:9000"
+    depends_on:
+      - kafka
+      - zookeeper
     environment:
       - SPRING_PROFILES_ACTIVE=dev
 
