--- a/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
+++ b/buildSrc/src/main/groovy/atticket-spring-boot-app.gradle
@@ -9,6 +9,9 @@ dependencies {
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2021.0.5")
     implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
+
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("com.mysql:mysql-connector-j")
 }
