--- a/product/src/main/resources/application.yml
+++ b/product/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   port: 8000
 
+logging:
+  level:
+    root: info
+
+
 api:
   reservation:
     url: localhost
@@ -28,4 +33,27 @@ spring:
         format_sql: true
     generate-ddl: true
     defer-datasource-initialization: true
+
+  kafka:
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      bootstrap-servers: localhost:9092
+    consumer:
+      auto-offset-reset: earliest
+      properties:
+        spring:
+          deserializer:
+            value:
+              delegate:
+                class: org.springframework.kafka.support.serializer.JsonDeserializer
+          json:
+            trusted:
+              packages: '*'
+      group-id: myGroup
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      bootstrap-servers: localhost:9092
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+
+
 
