--- a/settings.gradle
+++ b/settings.gradle
@@ -11,5 +11,8 @@ rootProject.name = 'at_ticket'
 include ':reservation'
 include ':payment'
 include ':product'
+include ':user'
 include ':common:response'
 include ':common:utils'
+include ':common:jwt-manager'
+include ':common:secret-config'
