--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -5,4 +5,6 @@ plugins {
 dependencies {
     implementation project(':common:response')
     implementation project(':common:utils')
+    implementation project(':common:jwt-manager')
+    implementation project(':common:secret-config')
 }
