feat: 예약하기 기능 추가

--- a/payment/src/main/resources/application-dev.yml
+++ b/payment/src/main/resources/application-dev.yml
@@ -2,9 +2,12 @@ server:
   port: 8200
 
 api:
+  product:
+    url: product
+    port: 8000
   reservation:
-    url: payment
-    port: 8200
+    url: reservation
+    port: 8100
 
 spring:
   datasource:
