--- a/kafka/build.gradle
+++ b/kafka/build.gradle
@@ -18,12 +18,16 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.kafka:spring-kafka'
-    implementation project(path: ':common:response')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+
+    implementation project(':common:response')
+    implementation project(':common:secret-config')
+
     implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     implementation group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
+
 }
 
 tasks.named('test') {
