--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,6 +17,10 @@ http {
     server user:9000;
   }
 
+  upstream kafka {
+     server kafka:9200;
+  }
+
   upstream keycloak {
     server keycloak:8080;
   }
