--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,7 +18,7 @@ services:
 
   database:
     image: mysql:8.0.21
-    container_name: at_ticket_db
+    container_name: mysql
     #DB시작 시 초기화 스크립트 실행
     volumes:
       - ./mysql-init-files/:/docker-entrypoint-initdb.d/
@@ -31,6 +31,30 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+
+  kafka:
+    image: wurstmeister/kafka:2.12-2.5.0
+    container_name: kafka
+    ports:
+      - "9092:9092"
+      - "9093:9093"
+    depends_on:
+      - zookeeper
+    environment:
+      JVM_OPTS: -Xmx1g -Xms1g -XX:MaxPermSize=1024m
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_LISTENERS: INSIDE://kafka:9093,OUTSIDE://0.0.0.0:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
 
 
   product:
@@ -74,6 +98,21 @@ services:
       - 8200
     environment:
       - SPRING_PROFILES_ACTIVE=dev
+
+
+  kafka-app:
+    build:
+      context: .
+      dockerfile: ./kafka/Dockerfile
+    container_name: at_ticket-kafka-app
+    ports:
+      - "9200:9200"
+    depends_on:
+      - kafka
+      - zookeeper
+    environment:
+      - SPRING_PROFILES_ACTIVE=dev
+
 
 
   user:
