- 필요 없는 파일/설정 삭제

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,12 +17,12 @@ http {
     server user:9000;
   }
 
-  upstream kafka {
-     server kafka:9200;
-  }
-
   upstream keycloak {
     server keycloak:8080;
+  }
+
+  upstream kafka-app {
+    server kafka:9200;
   }
 
   # Redirect all traffic to HTTPS
