메일 알림 기능을 위한 카프카 설정 추가  (#28)

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -21,6 +21,10 @@ http {
     server keycloak:8080;
   }
 
+  upstream kafka-app {
+    server kafka:9200;
+  }
+
   # Redirect all traffic to HTTPS
   server {
     listen 80;
