--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,6 @@ include ':product'
 include ':user'
 include ':common:response'
 include ':common:utils'
+include 'kafka'
 include ':common:jwt-manager'
 include ':common:secret-config'
