--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -108,11 +108,17 @@ services:
     ports:
       - "9200:9200"
     depends_on:
-      - kafka
-      - zookeeper
+      database:
+        condition: service_healthy
+      keycloak:
+        condition: service_started
+      kafka:
+        condition: service_started
+      zookeeper:
+        condition: service_started
+
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-
 
 
   user:
