도커 빌드 에러 수정 (#30)

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,10 +10,15 @@ services:
     # SSL 적용
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl/api/fullchain.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem
-      - ./ssl/api/privkey.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem
-      - ./ssl/keycloak/fullchain.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem
-      - ./ssl/keycloak/privkey.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem
+      #      - ./ssl/api/fullchain.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem
+      #      - ./ssl/api/privkey.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem
+      #      - ./ssl/keycloak/fullchain.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem
+      #      - ./ssl/keycloak/privkey.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem
+
+      - /home/at_ticket_setting/ssl/api/fullchain.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/fullchain.pem
+      - /home/at_ticket_setting/ssl/api/privkey.pem:/etc/letsencrypt/live/api.atticket.o-r.kr/privkey.pem
+      - /home/at_ticket_setting/ssl/keycloak/fullchain.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/fullchain.pem
+      - /home/at_ticket_setting/ssl/keycloak/privkey.pem:/etc/letsencrypt/live/keycloak.atticket.o-r.kr/privkey.pem
 
 
   database:
@@ -22,6 +27,7 @@ services:
     #DB시작 시 초기화 스크립트 실행
     volumes:
       - ./mysql-init-files/:/docker-entrypoint-initdb.d/
+      - db_volume:/var/lib/mysql
     expose:
       - 3306
     restart: always
@@ -108,11 +114,17 @@ services:
     ports:
       - "9200:9200"
     depends_on:
-      - kafka
-      - zookeeper
+      database:
+        condition: service_healthy
+      keycloak:
+        condition: service_started
+      kafka:
+        condition: service_started
+      zookeeper:
+        condition: service_started
+
     environment:
       - SPRING_PROFILES_ACTIVE=dev
-
 
 
   user:
@@ -150,3 +162,5 @@ services:
     depends_on:
       database:
         condition: service_healthy
+volumes:
+  db_volume:
