--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -22,7 +22,7 @@ http {
   }
 
   upstream kafka-app {
-    server kafka:9200;
+    server kafka-app:9200;
   }
 
   # Redirect all traffic to HTTPS
