feat: 예약 프로세스 로직 추가

--- a/user/build.gradle
+++ b/user/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     implementation project(':common:response')
     implementation project(':common:utils')
     implementation project(':common:secret-config')
+    implementation project(':common:jwt-manager')
 }
