--- a/frontend2/package.json
+++ b/frontend2/package.json
@@ -12,7 +12,10 @@
     "lodash": "^4.17.21",
     "nuxt": "^2.17.1",
     "vue": "^2.6.14",
-    "vue-lodash": "^2.1.2"
+    "vue-lodash": "^2.1.2",
+    "vuex-persistedstate": "^3.2.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "^2.2.1"
+  }
 }
